--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="stylesheet_oceantides.css" />
         <title id="title">Ocean Tides</title>
-    
+        <script src="script.js"></script>
     </head>
     <body>
        <h2>OceanTides</h2>
