Updated API, added chart template

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
         <button id="buttonGo">Data For Your Location</button> <!--Button to get data, js for this! -->
     </section>
 
+    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
 
+    
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 
 </html>
