Cleaned stuff up

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
     <section class="inputs">
         <label>Station ID: <a href="https://tidesandcurrents.noaa.gov/map/">(Find my station)</a></label>
-        <input type="number" id="station" required />
+        <input type="number" id="station" value="9410230" required />
         <br>
         <label>Start date:</label>
         <input type="date" id="begin_date" name="begin_date_picker" required />
