Working on Frontend

--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
         <title id="title">Ocean Tides</title>
         <script src="script.js"></script>
     </head>
+    <style>
+    div { /*box model */
+        width: 300px;
+        padding: 50px;
+        margin: 20px;
+      }
+    </style>
     <body>
     
     <section class="scrolltext">
         <span id="sunset">Sunsets at:</span> 
         <span id="sunrise">Sunrises at:</span>
-    </section> 
+    <!-- </section> 
     <div class="watertitle">
-        <h2>OceanTides</h2> <!-- add animation css end-->
-        <h2>OceanTides</h2>
+        <h2>OceanTides</h2>  add animation css end
         <p></p>
-    </section>
+    </section> -->
     <section class = "button">
-        <button id="dataButton">Data For Your Location</button> <!--Button to get data, js for this! -->
+        <button>Data For Your Location</button> <!--Button to get data, js for this! -->
     </section>
-    <section class="frontPhotos">
-        <a> <img class="first_photo" src="" ></a> <!-- photos for first page--> 
-        <a><img class="second_photo" src="" ></a> 
-    </section> 
+    <div>
+        <a><img class="frontPhotos" src="placeholder_image1.jpg" ></a> <!-- photos for first page--> 
+        <a><img class="frontPhotos" src="placeholder_image2.jpeg" ></a> 
+    </div> 
         
 
     </body>
