--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
 
-    
+    <footer>
+        <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a></p>
+    </footer>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
