Fixed merge issues (I think)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-       <link rel="stylesheet" href="shylesheet_oceantides.css"" />
+       <link rel="stylesheet" href="shylesheet_oceantides.css" />
         <title id="title">Ocean Tides</title>
         <script src="script.js"></script>
     </head>
@@ -13,51 +13,49 @@
         margin: 20px;
       }
     </style>
+
     <body>
     
-    <section class="scrolltext">
-        <span id="sunset">Sunsets at:</span>
-        <span id="sunrise">Sunrises at:</span>
-    <!-- </section> 
-    <div class="watertitle">
-        <h2>OceanTides</h2>  add animation css end
-        <p></p>
-    </section> -->
-    <section class = "button">
-        <button>Data For Your Location</button> <!--Button to get data, js for this! -->
-    </section>
-    <div>
-        <a><img class="frontPhotos" src="placeholder_image1.jpg" ></a> <!-- photos for first page--> 
-        <a><img class="frontPhotos" src="placeholder_image2.jpeg" ></a> 
-    </div> 
-        
+        <section class="scrolltext">
+            <span id="sunset">Sunsets at:</span>
+            <span id="sunrise">Sunrises at:</span>
+        </section>
+        <!-- </section> 
+        <div class="watertitle">
+            <h2>OceanTides</h2>  add animation css end
+            <p></p>
+        </section> -->
+        <section class="button">
+            <button id="buttonGo">Data For Your Location</button> <!--Button to get data, js for this! -->
+        </section>
 
-    <section class="frontPhotos">
-        <a> <img class="first_photo" src=""></a> <!-- photos for first page-->
-        <a><img class="second_photo" src=""></a>
-    </section>
-    <section class="inputs">
-        <label>Station ID: <a href="https://tidesandcurrents.noaa.gov/map/">(Find my station)</a></label>
-        <input type="number" id="station" value="9410230" required />
-        <br>
-        <label>Start date:</label>
-        <input type="date" id="begin_date" name="begin_date_picker" required />
-        <br>
-        <label>End date:</label>
-        <input type="date" id="end_date" name="end_date_picker" required />
-        <br>
-    </section>
-    <section class="button">
-        <button id="buttonGo">Data For Your Location</button> <!--Button to get data, js for this! -->
-    </section>
+        <div>
+            <a><img class="frontPhotos" src="placeholder_image1.jpg" ></a> <!-- photos for first page--> 
+            <a><img class="frontPhotos" src="placeholder_image2.jpeg" ></a> 
+        </div> 
 
-    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+        <section class="frontPhotos">
+            <a> <img class="first_photo" src=""></a> <!-- photos for first page-->
+            <a><img class="second_photo" src=""></a>
+        </section>
 
-    <footer>
-        <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a></p>
-    </footer>
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <section class="inputs">
+            <label>Station ID: <a href="https://tidesandcurrents.noaa.gov/map/">(Find my station)</a></label>
+            <input type="number" id="station" value="9410230" required />
+            <br>
+            <label>Start date:</label>
+            <input type="date" id="begin_date" name="begin_date_picker" required />
+            <br>
+        </section>
+
+        <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+
+        <footer>
+            <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a></p>
+        </footer>
+
+        <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </body>
 
