--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <title id="title">Ocean Tides</title>
         <script src="script.js"></script>
     </head>
-    <style>
+    <!--style>
     div { /*box model */
         width: 300px;
         padding: 50px;
         margin: 20px;
       }
-    </style>
+    </style-->
 
     <body>
     
@@ -48,8 +48,12 @@
             <br>
         </section>
 
-        <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
-
+        <div class="graphFlex">
+            <div class="graph">
+                <canvas id="myChart" class="graph"></canvas>
+            </div>
+        </div>
+        <hr>
         <footer>
             <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a></p>
         </footer>
