Added more attributions to the footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <hr>
         <footer>
-            <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a></p>
+            <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a>, <a href="https://chartjs.org">chart.js</a> and <a href="https://api.tidesandcurrents.noaa.gov/api/prod/">NOAA CO-OPS</a></p>
         </footer>
 
         <script src="script.js"></script>
