--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <input type="date" id="begin_date" name="begin_date_picker" required />
                     <br>
                     <button id="buttonGo">Go</button> <!--Button to get data, js for this! -->
+                    <br>
+                    <p class="errortext" id="errortext"></p>
                 </div>
                 <div class="graph">
                     <canvas id="myChart" class="graph"></canvas>
