Fixed incorrect intervals

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                         <br>
                         <h4>Time format</h4>
                         <div class="radioButtonGroup">
-                            <label for="radio12">12 Hour</label>
+                            <label for="radio12h">12 Hour</label>
                             <input type="radio" name="timeFormat" id="radio12h" value="12" checked />
-                            <label for="radio24">24 Hour</label>
+                            <label for="radio24h">24 Hour</label>
                             <input type="radio" name="timeFormat" id="radio24h" value="24" />
                         </div>
                     </div>
