Added solar noon to displayed data

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                 <h4>Dawn:</h4>
                 <p class="sunInfoText" id="dawn">--</p>
                 <br>
-                <h4>Sunrise: </h4>
+                <h4>Sunrise:</h4>
                 <p class="sunInfoText" id="sunrise">--</p>
+                <br>
+                <h4>Solar noon:</h4>
+                <p class="sunInfoText" id="solar_noon">--</p>
                 <br>
                 <h4>Golden hour:</h4>
                 <p class="sunInfoText" id="golden_hour">--</p>
