Added credits to footer

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>
         <hr style="margin-top: 64px;">
         <footer>
+            <p>Made by Miles Opferkuch and Dahlia-Belle Coleman</p>
             <p>Powered by <a href="https://sunrisesunset.io">sunrisesunset.io</a>, <a href="https://chartjs.org">chart.js</a> and <a href="https://api.tidesandcurrents.noaa.gov/api/prod/">NOAA CO-OPS</a></p>
         </footer>
 
