Added 24 hour format support for sun times

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                         <br>
                         <input type="number" id="station" name="stationInput" value="9410230" style="width: 120px" required />
                         <br><br>
-                        <label for="begin_date_picker">Date:</label>
+                        <label for="datePicker">Date:</label>
                         <br>
-                        <input type="date" id="beginDate" name="begin_date_picker" required />
+                        <input type="date" id="datePicker" name="datePicker" required />
                     </div>
                     <div class="inputsRight">
                         <h4>Units</h4>
@@ -56,28 +56,28 @@
             </div>
             <div class="sunData">
                 <h4>First light: </h4>
-                <p class="sunInfoText" id="first_light">--</p>
+                <p class="textSunInfo" id="first_light">--</p>
                 <br>
                 <h4>Dawn:</h4>
-                <p class="sunInfoText" id="dawn">--</p>
+                <p class="textSunInfo" id="dawn">--</p>
                 <br>
                 <h4>Sunrise:</h4>
-                <p class="sunInfoText" id="sunrise">--</p>
+                <p class="textSunInfo" id="sunrise">--</p>
                 <br>
                 <h4>Solar noon:</h4>
-                <p class="sunInfoText" id="solar_noon">--</p>
+                <p class="textSunInfo" id="solar_noon">--</p>
                 <br>
                 <h4>Golden hour:</h4>
-                <p class="sunInfoText" id="golden_hour">--</p>
+                <p class="textSunInfo" id="golden_hour">--</p>
                 <br>
                 <h4>Sunset: </h4>
-                <p class="sunInfoText" id="sunset">--</p>
+                <p class="textSunInfo" id="sunset">--</p>
                 <br>
                 <h4>Dusk:</h4>
-                <p class="sunInfoText" id="dusk">--</p>
+                <p class="textSunInfo" id="dusk">--</p>
                 <br>
                 <h4>Last light:</h4>
-                <p class="sunInfoText" id="last_light">--</p>
+                <p class="textSunInfo" id="last_light">--</p>
             </div>
         </div>
         <hr style="margin-top: 64px;">
